Mise place Icon - Vue

--- a/style/style.scss
+++ b/style/style.scss
@@ -5,7 +5,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-
+    flex-direction: column;
     #puzzle {
         display: grid;
         grid-template-columns: repeat(3, 100px);
