--- a/style/style.css
+++ b/style/style.css
@@ -7,18 +7,58 @@ body {
   align-items: center;
   flex-direction: column;
 }
-body #puzzle {
+
+.menu-container .titre {
+  animation: colorCycle 2s infinite;
+  text-align: center;
+  font-size: 35px;
+}
+.menu-container .grid {
+  text-align: center;
+}
+.menu-container .btn-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.menu-container .btn-container .btn {
+  background-color: #f0f0f0;
+  border: none;
+  padding: 20px 70px;
+  font-size: 2.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+.menu-container .btn-container .btn:hover {
+  background-color: #e0e0e0;
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+}
+.menu-container .btn-container .btn:active {
+  animation: vibrate 0.3s;
+}
+
+.menu-container.none {
+  display: none;
+}
+
+.puzzle {
+  display: none;
+}
+
+.puzzle.active {
   display: grid;
-  grid-template-columns: repeat(3, 100px);
-  grid-template-rows: repeat(3, 100px);
   gap: 5px;
   width: max-content;
-  margin: 20px auto;
+  margin: 50px auto;
 }
-body #puzzle .casePuzzle {
+.puzzle.active .casePuzzle {
   width: 100px;
   height: 100px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,13 +69,45 @@ body #puzzle .casePuzzle {
   border-radius: 5px;
   transition: background-color 0.3s;
 }
-body #puzzle .casePuzzle:hover {
+.puzzle.active .casePuzzle:hover {
   background-color: #45a049;
 }
-body #puzzle .casePuzzle.empty {
+.puzzle.active .casePuzzle.empty {
   background-color: #ffffff;
   border: 2px dashed #ccc;
   cursor: default;
+}
+
+@keyframes colorCycle {
+  0% {
+    color: red;
+  }
+  50% {
+    color: blue;
+  }
+  100% {
+    color: green;
+  }
+}
+@keyframes vibrate {
+  0% {
+    transform: translateX(0);
+  }
+  20% {
+    transform: translateX(-2px);
+  }
+  40% {
+    transform: translateX(2px);
+  }
+  60% {
+    transform: translateX(-2px);
+  }
+  80% {
+    transform: translateX(2px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
