--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,4 @@
-body{
+body {
     width: 100%;
     height: 90vh;
     box-sizing: border-box;
@@ -6,17 +6,65 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    #puzzle {
-        display: grid;
-        grid-template-columns: repeat(3, 100px);
-        grid-template-rows: repeat(3, 100px);
-        gap: 5px; 
-        width: max-content;
-        margin: 20px auto;
-        .casePuzzle {
+}
+
+.menu-container {
+    .titre {
+        animation: colorCycle 2s infinite;
+        text-align: center;
+        font-size: 35px;
+    }
+
+    .grid {
+        text-align: center;
+    }
+
+    .btn-container {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+
+        .btn {
+            background-color: #f0f0f0;
+            border: none;
+            padding: 20px 70px;
+            font-size: 2.2rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-bottom: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
+            &:hover {
+                background-color: #e0e0e0;
+                box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+            }
+
+            &:active {
+                animation: vibrate 0.3s;
+            }
+        }
+    }
+}
+
+.menu-container.none {
+    display: none;
+}
+
+.puzzle {
+    display: none;
+}
+
+.puzzle.active {
+    display: grid;
+    gap: 5px;
+    width: max-content;
+    margin: 50px auto;
+    .casePuzzle {
         width: 100px;
         height: 100px;
-        background-color: #4CAF50;
+        background-color: #4caf50;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -26,16 +74,55 @@ body{
         cursor: pointer;
         border-radius: 5px;
         transition: background-color 0.3s;
-      
+
         &:hover {
             background-color: #45a049;
         }
-      
+
         &.empty {
             background-color: #ffffff;
             border: 2px dashed #ccc;
             cursor: default;
         }
     }
-  }
+}
+
+@keyframes colorCycle {
+    0% {
+        color: red;
+    }
+
+    50% {
+        color: blue;
+    }
+
+    100% {
+        color: green;
+    }
+}
+
+@keyframes vibrate {
+    0% {
+        transform: translateX(0);
+    }
+
+    20% {
+        transform: translateX(-2px);
+    }
+
+    40% {
+        transform: translateX(2px);
+    }
+
+    60% {
+        transform: translateX(-2px);
+    }
+
+    80% {
+        transform: translateX(2px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
 }
