--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   width: 100%;
   height: 90vh;
@@ -6,6 +7,14 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transition: background 0.5s ease;
+}
+body canvas {
+  position: absolute; /* Position absolue pour couvrir tout l'écran */
+  top: 0;
+  left: 0;
+  z-index: 0; /* Le canvas est derrière le puzzle */
+  pointer-events: none; /* Pour que le canvas n'interfère pas avec les clics sur le puzzle */
 }
 body #puzzle {
   display: grid;
